force-app/main/default/objects/Dynacat_Filter__c/Dynacat_Filter__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Dynacat Filter</label>
</CustomObject>