force-app/main/default/objects/Dynacat_Filter__c/fields/Attribute_Lookup_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Lookup_Field_Name__c</fullName>
    <label>Attribute Lookup Field Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>