force-app/main/default/objects/Dynacat_Filter__c/fields/Checked_Label__c.field-meta.xml
<CustomField>
    <fullName>Checked_Label__c</fullName>
    <inlineHelpText>Label for the checked / true option for a Boolean (Checkbox) field.</inlineHelpText>
    <label>Checked Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>