force-app/main/default/objects/Dynacat_Filter__c/fields/Display_Type__c.field-meta.xml
<CustomField>
    <fullName>Display_Type__c</fullName>
    <inlineHelpText>Checkbox, Radio Button, Picklist, Multi-Select Picklist, Range, Date</inlineHelpText>
    <label>Filter Display Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>