force-app/main/default/objects/Dynacat_Filter__c/fields/Filter__c.field-meta.xml
<CustomField>
    <fullName>Filter__c</fullName>
    <inlineHelpText>Section Text, Field API Name, or Attribute AutoNum</inlineHelpText>
    <label>Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>