force-app/main/default/objects/Dynacat_Filter__c/fields/Min__c.field-meta.xml
<CustomField>
    <fullName>Min__c</fullName>
    <inlineHelpText>Minimum value for range fields.</inlineHelpText>
    <label>Min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>