force-app/main/default/objects/Dynacat_Filter__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <inlineHelpText>Name of the object that this field is from.  Important if the filter is a parent field.</inlineHelpText>
    <label>Object API Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>