force-app/main/default/objects/Dynacat_Filter__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Section, Field, or Attribute</inlineHelpText>
    <label>Filter Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>