force-app/main/default/objects/Dynacat_Filter__c/fields/Unchecked_Label__c.field-meta.xml
<CustomField>
    <fullName>Unchecked_Label__c</fullName>
    <inlineHelpText>Label for the unchecked / false option for a Boolean (Checkbox) field.</inlineHelpText>
    <label>Unchecked Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>