force-app/main/default/objects/Dynacat_Filter__c/fields/Valid_Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Valid_Picklist_Values__c</fullName>
    <inlineHelpText>(Optional) Comma-separated picklist values for the filter. If ommitted, all picklist values for the field will be used.</inlineHelpText>
    <label>Valid Picklist Values</label>
    <type>TextArea</type>
</CustomField>